Example code of how to create cards via Java code. Will be used to create the scrollable section including user account cards.

--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -6,6 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".HomeScreen">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:id="@+id/linearLayout"/>
+    </ScrollView>
+
     <TextView
         android:id="@+id/greeting"
         android:layout_width="wrap_content"
