Transfer Confirmation Page created

--- a/app/src/main/res/layout/activity_new_recipient.xml
+++ b/app/src/main/res/layout/activity_new_recipient.xml
@@ -43,7 +43,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/textInputEditText"
+                android:id="@+id/emailInput"
                 android:layout_width="352dp"
                 android:layout_height="45dp"
                 android:layout_marginTop="10dp"
@@ -135,7 +135,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
         <Button
-            android:id="@+id/button"
+            android:id="@+id/sendbutton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
