New image when transfer completes

--- a/app/src/main/res/layout/activity_transfer_complete.xml
+++ b/app/src/main/res/layout/activity_transfer_complete.xml
@@ -26,7 +26,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/checkbox_on_background" />
+        app:srcCompat="@drawable/check_mark_2025986_960_720" />
 
     <Button
         android:id="@+id/anotherTransfer"
