Formatted buttons on account page.

--- a/app/src/main/res/layout/activity_account_page.xml
+++ b/app/src/main/res/layout/activity_account_page.xml
@@ -12,12 +12,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:text="Account Name"
-        app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/accountNumber"
@@ -47,52 +45,75 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Balance"
-        app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.886"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/accountName"
-        app:layout_constraintVertical_bias="0.098" />
+        app:layout_constraintTop_toBottomOf="@+id/accountName" />
 
-    <HorizontalScrollView
-        android:id="@+id/horizontalScrollView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="16dp"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/sortCode"
-        app:layout_constraintVertical_bias="0.05">
+        app:layout_constraintTop_toBottomOf="@id/sortCode">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
+        <Button
+            android:id="@+id/renameButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.8"
+            android:backgroundTint="@color/teal_200"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:text="@string/renameButton"
+            android:textSize="11sp"
+            android:textStyle="bold"
+            app:cornerRadius="10dp" />
 
-            <Button
-                android:id="@+id/statementButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/statementButton" />
+        <Button
+            android:id="@+id/lockButton"
+            android:layout_width="0dp"
+            android:layout_weight="0.8"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/teal_200"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:text="@string/lockButton"
+            android:textSize="11sp"
+            android:textStyle="bold"
+            app:cornerRadius="10dp"/>
 
-            <Button
-                android:id="@+id/shareDetailsButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/shareDetailsButton" />
+        <Button
+            android:id="@+id/statementButton"
+            style="@style/Widget.MaterialComponents.Button"
+            android:layout_width="0dp"
+            android:layout_weight="0.8"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/teal_200"
+            android:fontFamily="sans-serif-condensed"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:text="@string/statementButton"
+            android:textSize="11sp"
+            android:textStyle="bold"
+            app:cornerRadius="10dp"/>
 
-            <Button
-                android:id="@+id/lockButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/lockButton" />
+        <Button
+            android:id="@+id/shareDetailsButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:backgroundTint="@color/teal_200"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:text="@string/shareDetailsButton"
+            android:textSize="11sp"
+            android:textStyle="bold"
+            app:cornerRadius="10dp"/>
 
-            <Button
-                android:id="@+id/renameButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/renameButton" />
-        </LinearLayout>
-    </HorizontalScrollView>
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
