--- a/app/src/main/res/layout/activity_account_page.xml
+++ b/app/src/main/res/layout/activity_account_page.xml
@@ -10,10 +10,13 @@
         android:id="@+id/accountName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
+        android:background="@color/teal_200"
         android:text="Account Name"
+        android:textSize="30sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -21,8 +24,10 @@
         android:id="@+id/accountNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="2dp"
         android:layout_marginTop="16dp"
         android:text="Account Number"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@id/sortCode"
         app:layout_constraintEnd_toStartOf="@+id/balance"
         app:layout_constraintHorizontal_bias="0.074"
@@ -33,10 +38,12 @@
         android:id="@+id/sortCode"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="2dp"
         android:layout_marginTop="16dp"
         android:text="Sort Code"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.045"
+        app:layout_constraintHorizontal_bias="0.035"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/accountNumber" />
 
@@ -44,13 +51,21 @@
         android:id="@+id/balance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="2dp"
+        android:background="@color/teal_200"
         android:text="Balance"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.886"
+        app:layout_constraintHorizontal_bias="0.867"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/accountName" />
+        app:layout_constraintTop_toBottomOf="@+id/accountName"
+        app:layout_constraintVertical_bias="0.0" />
 
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
@@ -76,22 +91,22 @@
         <Button
             android:id="@+id/lockButton"
             android:layout_width="0dp"
-            android:layout_weight="0.8"
             android:layout_height="wrap_content"
+            android:layout_weight="0.8"
             android:backgroundTint="@color/teal_200"
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
             android:text="@string/lockButton"
             android:textSize="11sp"
             android:textStyle="bold"
-            app:cornerRadius="10dp"/>
+            app:cornerRadius="10dp" />
 
         <Button
             android:id="@+id/statementButton"
             style="@style/Widget.MaterialComponents.Button"
             android:layout_width="0dp"
-            android:layout_weight="0.8"
             android:layout_height="wrap_content"
+            android:layout_weight="0.8"
             android:backgroundTint="@color/teal_200"
             android:fontFamily="sans-serif-condensed"
             android:paddingLeft="5dp"
@@ -99,7 +114,7 @@
             android:text="@string/statementButton"
             android:textSize="11sp"
             android:textStyle="bold"
-            app:cornerRadius="10dp"/>
+            app:cornerRadius="10dp" />
 
         <Button
             android:id="@+id/shareDetailsButton"
@@ -112,7 +127,7 @@
             android:text="@string/shareDetailsButton"
             android:textSize="11sp"
             android:textStyle="bold"
-            app:cornerRadius="10dp"/>
+            app:cornerRadius="10dp" />
 
     </LinearLayout>
 
