--- a/app/src/main/res/layout/activity_account_page.xml
+++ b/app/src/main/res/layout/activity_account_page.xml
@@ -6,12 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".ui.accountPage.AccountPage">
 
-    <TextView
+    <EditText
         android:id="@+id/accountName"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:background="@color/teal_200"
+        android:focusable="false"
+        android:gravity="center_horizontal"
+        android:lines="1"
+        android:maxLines="1"
+        android:singleLine="true"
         android:text="Account Name"
         android:textSize="30sp"
         android:textStyle="bold"
