--- a/app/src/main/res/layout/activity_new_recipient.xml
+++ b/app/src/main/res/layout/activity_new_recipient.xml
@@ -109,10 +109,23 @@
             app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="20dp"
             app:layout_constraintTop_toTopOf="parent" />
+            <TextView
+                android:id="@+id/textView20"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="10dp"
+                android:text="Choose outgoing account:"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+            <Spinner
+                android:id="@+id/accounts_spinner"
+                android:layout_width="149dp"
+                android:layout_height="44dp"
+                android:layout_marginTop="20dp"
+                android:layout_gravity="center_horizontal"/>
 
-
-
-        <com.google.android.material.textfield.TextInputEditText
+            <com.google.android.material.textfield.TextInputEditText
             android:layout_width="85dp"
             android:layout_height="49dp"
             android:layout_marginTop="20dp"
