Added images of locks to account page to represent whether the account is locked or not. This is changed when the lock button is pressed.

--- a/app/src/main/res/layout/activity_account_page.xml
+++ b/app/src/main/res/layout/activity_account_page.xml
@@ -6,11 +6,46 @@
     android:layout_height="match_parent"
     tools:context=".ui.accountPage.AccountPage">
 
+    <ImageView
+        android:id="@+id/lockedImage"
+        android:layout_width="27dp"
+        android:layout_height="33dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="2dp"
+        android:adjustViewBounds="false"
+        android:elevation="5dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@+id/accountName"
+        app:layout_constraintEnd_toEndOf="@+id/accountName"
+        app:layout_constraintHorizontal_bias="0.953"
+        app:layout_constraintStart_toStartOf="@+id/accountName"
+        app:layout_constraintTop_toTopOf="@+id/accountName"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@drawable/locked" />
+
+    <ImageView
+        android:id="@+id/unlockedImage"
+        android:layout_width="27dp"
+        android:layout_height="33dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="2dp"
+        android:adjustViewBounds="false"
+        android:elevation="5dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@+id/accountName"
+        app:layout_constraintEnd_toEndOf="@+id/accountName"
+        app:layout_constraintHorizontal_bias="0.953"
+        app:layout_constraintStart_toStartOf="@+id/accountName"
+        app:layout_constraintTop_toTopOf="@+id/accountName"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@drawable/unlocked" />
+
     <EditText
         android:id="@+id/accountName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="2dp"
         android:background="@color/teal_200"
         android:focusable="false"
         android:gravity="center_horizontal"
@@ -21,7 +56,7 @@
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -77,8 +112,10 @@
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/sortCode">
+        app:layout_constraintTop_toBottomOf="@id/sortCode"
+        app:layout_constraintVertical_bias="0.0">
 
         <Button
             android:id="@+id/renameButton"
@@ -134,5 +171,6 @@
             app:cornerRadius="10dp" />
 
     </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
