clicking the view pin button will now ask for the users password and if correct will display the pin

--- a/app/src/main/res/layout/activity_card.xml
+++ b/app/src/main/res/layout/activity_card.xml
@@ -106,6 +106,7 @@
         android:layout_width="382dp"
         android:layout_height="55dp"
         android:layout_marginTop="4dp"
+        android:onClick="viewPINOnClick"
         android:text="View PIN"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
