--- a/app/src/main/res/layout/activity_card.xml
+++ b/app/src/main/res/layout/activity_card.xml
@@ -138,6 +138,7 @@
         android:layout_width="382dp"
         android:layout_height="55dp"
         android:layout_marginTop="4dp"
+        android:onClick="changePINOnClick"
         android:text="Change PIN"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
